[project]
name = "charlizy-py-lab"
version = "0.1.0"
description = "Beyond syntax: An ultra-fast playground to reshape your engineering cognition and build AI-driven Python applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "streamlit>=1.54.0",
]
